syntax = "proto3";

package lospan;

option go_package = "./lospan";

service Lospan {
    // ListApplications lists all applications 
    rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse);

    rpc RetrieveApplication(GetApplicationRequest) returns (RetrieveApplicationResponse);

    rpc Createpplication(CreateApplicationRequest) returns (CreateApplicationResponse);

    rpc UpdateApplication(UpdateApplicationRequest) returns (UpdateApplicationResponse);

    rpc DeleteApplication(DeleteApplicationRequest) returns (DeleteApplicationResponse);

    rpc ListDevices(ListDeviceRequest) returns (ListDeviceResponse);

    rpc CreateDevice(CreateDeviceRequest) returns (CreateDeviceResponse);

    rpc RetrieveDevice(RetrieveDeviceRequest) returns (RetrieveDeviceResponse);

    // UpdateDevice updates a devices
    rpc UpdateDevice(UpdateDeviceRequest) returns (UpdateDeviceResponse);

    // DeleteDevice removes a device
    rpc DeleteDevice(DeleteDeviceRequest) returns (DeleteDeviceResponse);

    // SendMessage sends a message to a device
    rpc SendMessage(SendRequest) returns (SendResponse);

    // StreamData streams data for an application or a gateway to the client.
    rpc StreamData(StreamDataRequest) returns (stream StreamDataResponse);

    rpc ListGateways(ListGatewaysRequest) returns (ListGatewaysResponse);

    rpc CreateGateway(CreateGatewayRequest) returns (CreateGatewayResponse);

    rpc RetrieveGateway(RetrieveGatewayRequest) returns (RetrieveGatewayResponse);

    rpc UpdateGateway(UpdateGatewayRequest) returns (UpdateGatewayResponse);

    rpc DeleteGateway(DeleteGatewayRequest) returns (DeleteGatewayResponse);
};